umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_cn-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#c-#n#v3" "N#n#v3"]
      :bonds [[0 1 :triple]]
      :charge -1
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#c-#n#v3" "N#n#v3"]
      :bonds [[0 1 :triple]]
      :charge -1
      :spin "#u0#s1"}
    :success true}}
