umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_ho2-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["O#c-#n3#v" "O#n2#v2" "H#v"] :bonds [[0 1 "1"] [1 2 "1"]]}
    :success true}
  :counts {
    :output {:atoms ["O#c-#n3#v" "O#n2#v2" "H#v"] :bonds [[0 1 "1"] [1 2 "1"]]}
    :success true}}
