umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_nh2-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["N#c-#n2#v2" "H#v" "H#v"] :bonds [[0 1 :single] [0 2 :single]]}
    :success true}
  :counts {
    :output {:atoms ["N#c-#n2#v2" "H#v" "H#v"] :bonds [[0 1 :single] [0 2 :single]]}
    :success true}}
