umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_no3-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["N#c+#v4" "O#n2#v2" "O#c-#n3#v" "O#c-#n3#v"]
      :bonds [[0 1 :double] [0 2 :single] [0 3 :single]]
      :charge -1
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["N#c+#v4" "O#n2#v2" "O#c-#n3#v" "O#c-#n3#v"]
      :bonds [[0 1 :double] [0 2 :single] [0 3 :single]]
      :charge -1
      :spin "#u0#s1"}
    :success true}}
