umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_o22-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["O#c-#n3#v" "O#c-#n3#v"]
      :bonds [[0 1 :single]]
      :charge -2
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["O#c-#n3#v" "O#c-#n3#v"]
      :bonds [[0 1 :single]]
      :charge -2
      :spin "#u0 #s1"}
    :success true}}
