umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_oh3+.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["O#c+#n#v3" "H#v" "H#v" "H#v"]
      :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["O#c+#n#v3" "H#v" "H#v" "H#v"]
      :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"]]}
    :success true}}
